2014-07-15  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        Buildfix if LLINT_SLOW_PATH_TRACING is enabled
        https://bugs.webkit.org/show_bug.cgi?id=133790

        Reviewed by Mark Lam.

        * llint/LLIntSlowPaths.cpp:
        (JSC::LLInt::LLINT_SLOW_PATH_DECL):

2014-07-14  Filip Pizlo  <fpizlo@apple.com>

        Allow for Int52Rep to see things other than Int32, and make this testable
        https://bugs.webkit.org/show_bug.cgi?id=134873
        <rdar://problem/17641915>

        Reviewed by Geoffrey Garen and Mark Hahnenberg.
        
        A major premise of our type inference is that prediction propagation can say whatever it
        wants and we'll still have valid IR after Fixup. This previously didn't work with Int52s.
        We required some kind of agreement between prediction propagation and fixup over which
        data flow paths were Int52 and which weren't.
        
        It turns out that we basically had such an agreement, with the exception of code that was
        unreachable due to ForceOSRExit. Then, fixup and prediction propagation would disagree. It
        might be nice to fix that bug - but it's only in the case of Int52 that such a thing would
        be a bug! Normally, we allow sloppiness in prediction propagation.
        
        This patch allows us to be sloppy with Int52 prediction propagation by giving Int52Rep the
        ability to see inputs other than Int32. This fixes the particular ForceOSRExit bug (see
        int52-force-osr-exit-path.js for the reduced test case). To make sure that the newly
        empowered Int52Rep is actually correct - in case we end up using it on paths other than
        ForceOSRExit - this patch introduces an internal intrinsic called fiatInt52() that forces
        us to attempt Int52 conversion on the input. This patch adds a bunch of tests that stress
        this intrinsic. This means that we're now stressing Int52Rep more so than ever before!
        